--- a/src/App.css
+++ b/src/App.css
@@ -7,37 +7,41 @@
   padding: ;
 } */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.links {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  gap: 20px;
+  padding-block: 40px;
+}
+
+footer {
+  border-top: 2px solid rgb(216, 216, 216);
+  padding-top: 20px;
+  padding-bottom: 48px;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
+}
+
+.social {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 50px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+@media (max-width: 480px) {
+  footer {
+    display: none;
+  }
+  .social {
+    display: none;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer p {
+  color: #667085;
+  font-size: 16px;
 }
