--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,19 @@
   padding-block: 40px;
 }
 
+.link {
+  width: 100%;
+  cursor: pointer;
+  border: none;
+  padding-block: 20px;
+  background-color: #EAECF0;
+  border-radius: 8px;
+  color: #101828;
+  font-weight: 600;
+  font-size: 18px;
+  text-decoration: none;
+}
+
 footer {
   border-top: 2px solid rgb(216, 216, 216);
   padding-top: 20px;
