--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -1,6 +1,6 @@
 .container {
     margin: 120px 25%;
-    border: 5px solid red;
+    /* border: 5px solid red; */
     text-align: start;
 }
 
@@ -9,7 +9,7 @@ h1 {
     line-height: 44px;
     letter-spacing: -0.02em;
     color: #101828;
-    margin-bottom: 20px;
+    margin-bottom: 16px;
     font-weight: 600;
 }
 
@@ -18,6 +18,10 @@ h1 ~ p {
     font-size: 20px;
     line-height: 30px;
     font-weight: 400;
+}
+
+.group p {
+    margin-top: 8px;
 }
 
 form {
@@ -55,6 +59,22 @@ input::placeholder {
     font-weight: 400;
 }
 
+input:focus.errorInput, textarea:focus.errorInput {
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #FFD3CC;
+}
+
+input:focus, textarea:focus {
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
+}
+
+.error {
+    color: #F89687;
+}
+
+.errorInput {
+    border: 1px solid #F89687;
+}
+
 .w-100 {
     width: 100%;
 }
@@ -69,6 +89,7 @@ textarea {
     border-radius: 8px;
     padding: 12px 14px;
     border: 1px solid #D0D5DD;
+    outline: none;
 }
 
 textarea::placeholder {
@@ -89,7 +110,18 @@ textarea::placeholder {
     display: inline-block;
     width: unset;
     padding: 0;
-    border-radius: 8px;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #D0D5DD;
+    border-radius: 6px;
+}
+
+#check:checked {
+    /* background: white; */
+    fill: white;
+    border: 1px solid #1570EF;
+    color: #1570EF;
+    border-radius: 6px;
 }
 
 #agree {
@@ -100,7 +132,7 @@ textarea::placeholder {
     font-weight: 500;
 }
 
-#submit {
+#btn_submit {
     width: 100%;
     background-color: #1570EF;
     border: 1px solid #1570EF;
@@ -113,20 +145,35 @@ textarea::placeholder {
     margin-top: 32px;
 }
 
+@media screen and (max-width: 1280px) {
+    .container {
+        margin: 150px 8%;
+    }
+}
+
 @media screen and (max-width: 1024px) {
     .container {
-        margin: 150px 10% 0;
+        margin: 150px 10%;
     }
 }
 
 @media screen and (max-width: 850px) {
     .container {
-        margin: 150px 4% 0;
+        margin: 150px 4%;
     }
 }
 
 @media screen and (max-width: 640px) {
     .container {
-        margin: 150px 0% 0;
+        margin: 120px 0%;
+    }
+    .row {
+        grid-template-columns: 1fr;
+    }
+    .d-flex {
+        align-items: flex-start;
+    }
+    #agree {
+        line-height: 20px;
     }
 }
